[gd_scene load_steps=30 format=2]

[ext_resource path="res://Player/HUD.gd" type="Script" id=2]
[ext_resource path="res://Player/sword2.png" type="Texture" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.480469, 0.140762, 0.140762, 1 )
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 90
corner_radius_bottom_right = 90
corner_detail = 1
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.384314, 0.109804, 0.109804, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 90
corner_radius_bottom_right = 90
corner_detail = 1
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.141176, 0.380392, 0.482353, 1 )
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 90
corner_radius_bottom_right = 90
corner_detail = 1
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.109804, 0.254902, 0.384314, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 90
corner_radius_bottom_right = 90
corner_detail = 1
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.482353, 0.443137, 0.141176, 1 )
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 90
corner_radius_bottom_right = 90
corner_detail = 1
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.384314, 0.356863, 0.109804, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 90
corner_radius_bottom_right = 90
corner_detail = 1
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.227451, 0.227451, 0.227451, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
anti_aliasing = false

[sub_resource type="InputEventAction" id=8]
action = "Hotbar1"

[sub_resource type="ShortCut" id=9]
shortcut = SubResource( 8 )

[sub_resource type="InputEventAction" id=10]
action = "Hotbar2"

[sub_resource type="ShortCut" id=11]
shortcut = SubResource( 10 )

[sub_resource type="InputEventAction" id=12]
action = "Hotbar3"

[sub_resource type="ShortCut" id=13]
shortcut = SubResource( 12 )

[sub_resource type="InputEventAction" id=14]
action = "Hotbar4"

[sub_resource type="ShortCut" id=15]
shortcut = SubResource( 14 )

[sub_resource type="InputEventAction" id=16]
action = "Hotbar5"

[sub_resource type="ShortCut" id=17]
shortcut = SubResource( 16 )

[sub_resource type="InputEventAction" id=18]
action = "Hotbar6"

[sub_resource type="ShortCut" id=19]
shortcut = SubResource( 18 )

[sub_resource type="InputEventAction" id=20]
action = "Hotbar7"

[sub_resource type="ShortCut" id=21]
shortcut = SubResource( 20 )

[sub_resource type="InputEventAction" id=22]
action = "Hotbar8"

[sub_resource type="ShortCut" id=23]
shortcut = SubResource( 22 )

[sub_resource type="InputEventAction" id=24]
action = "Hotbar9"

[sub_resource type="ShortCut" id=25]
shortcut = SubResource( 24 )

[sub_resource type="InputEventAction" id=26]
action = "Hotbar10"

[sub_resource type="ShortCut" id=27]
shortcut = SubResource( 26 )

[node name="HUD" type="CanvasLayer" groups=["HUD"]]
script = ExtResource( 2 )

[node name="Health" type="ProgressBar" parent="."]
margin_left = 100.0
margin_top = 30.0
margin_right = 520.0
margin_bottom = 50.0
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
step = 1.0
value = 80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mana" type="ProgressBar" parent="."]
margin_left = 78.0
margin_top = 55.0
margin_right = 498.0
margin_bottom = 75.0
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
step = 1.0
value = 80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stamina" type="ProgressBar" parent="."]
margin_left = 56.0
margin_top = 80.0
margin_right = 476.0
margin_bottom = 100.0
custom_styles/fg = SubResource( 5 )
custom_styles/bg = SubResource( 6 )
step = 0.0
value = 80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HotbarBack" type="Panel" parent="."]
margin_left = 140.0
margin_top = 620.0
margin_right = 1140.0
margin_bottom = 720.0
custom_styles/panel = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hotbar1" type="Button" parent="."]
margin_left = 150.0
margin_top = 630.0
margin_right = 230.0
margin_bottom = 710.0
shortcut_in_tooltip = false
shortcut = SubResource( 9 )
icon = ExtResource( 3 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hotbar2" type="Button" parent="."]
margin_left = 250.0
margin_top = 630.0
margin_right = 330.0
margin_bottom = 710.0
shortcut = SubResource( 11 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hotbar3" type="Button" parent="."]
margin_left = 350.0
margin_top = 630.0
margin_right = 430.0
margin_bottom = 710.0
shortcut = SubResource( 13 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hotbar4" type="Button" parent="."]
margin_left = 450.0
margin_top = 630.0
margin_right = 530.0
margin_bottom = 710.0
shortcut = SubResource( 15 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hotbar5" type="Button" parent="."]
margin_left = 550.0
margin_top = 630.0
margin_right = 630.0
margin_bottom = 710.0
shortcut = SubResource( 17 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hotbar6" type="Button" parent="."]
margin_left = 650.0
margin_top = 630.0
margin_right = 730.0
margin_bottom = 710.0
shortcut = SubResource( 19 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hotbar7" type="Button" parent="."]
margin_left = 750.0
margin_top = 630.0
margin_right = 830.0
margin_bottom = 710.0
shortcut = SubResource( 21 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hotbar8" type="Button" parent="."]
margin_left = 850.0
margin_top = 630.0
margin_right = 930.0
margin_bottom = 710.0
shortcut = SubResource( 23 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hotbar9" type="Button" parent="."]
margin_left = 950.0
margin_top = 630.0
margin_right = 1030.0
margin_bottom = 710.0
shortcut = SubResource( 25 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hotbar10" type="Button" parent="."]
margin_left = 1050.0
margin_top = 630.0
margin_right = 1130.0
margin_bottom = 710.0
shortcut = SubResource( 27 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Hotbar1" to="." method="_on_Hotbar1_pressed"]
[connection signal="pressed" from="Hotbar2" to="." method="_on_Hotbar2_pressed"]
[connection signal="pressed" from="Hotbar3" to="." method="_on_Hotbar3_pressed"]
[connection signal="pressed" from="Hotbar4" to="." method="_on_Hotbar4_pressed"]
[connection signal="pressed" from="Hotbar5" to="." method="_on_Hotbar5_pressed"]
[connection signal="pressed" from="Hotbar6" to="." method="_on_Hotbar6_pressed"]
[connection signal="pressed" from="Hotbar7" to="." method="_on_Hotbar7_pressed"]
[connection signal="pressed" from="Hotbar8" to="." method="_on_Hotbar8_pressed"]
[connection signal="pressed" from="Hotbar9" to="." method="_on_Hotbar9_pressed"]
[connection signal="pressed" from="Hotbar10" to="." method="_on_Hotbar10_pressed"]
